# salmagundi

./: CHANGELOG.md  LICENSE.txt  README.md  requirements.txt  setup.cfg  setup.py
docs/: genindex.html  index.html  license.html  mod_colors.html  mod_config.html  mod_crypto.html  mod_files.html  mod_inputs.html  mod_strings.html  mod_utils.html  mod_validation.html  modules.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/salmagundi/: _stopwatch.html  colors.html  config.html  crypto.html  files.html  inputs.html  strings.html  utils.html  validation.html
docs/_sources/: index.rst.txt  license.rst.txt  mod_colors.rst.txt  mod_config.rst.txt  mod_crypto.rst.txt  mod_files.rst.txt  mod_inputs.rst.txt  mod_strings.rst.txt  mod_utils.rst.txt  mod_validation.rst.txt  modules.rst.txt  overview.rst.txt
docs/_static/: custom.css  documentation_options.js
src/salmagundi/: __init__.py  _docopt.py  _stopwatch.py  colors.py  config.py  crypto.py  files.py  inputs.py  strings.py  utils.py  validation.py
