[metadata]
name: salmagundi
version: 0.7.2
url: https://andreas19.github.io/salmagundi/
project_urls: Source code=https://github.com/andreas19/salmagundi/
author: Andreas19
author_email: andreas19@posteo.eu
classifiers:
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries
license: BSD-3-Clause
license_file: LICENSE.txt
description: Library with a collection of some more or less usefull functions.
long_description: file:README.md,CHANGELOG.md
long_description_content_type: text/markdown

[options]
install_requires:
    ansictrls>=0.1.0
    cryptography>=2.4.2
python_requires: >=3.6
packages: salmagundi
package_dir: =src
